parser.out


Unused terminals:


Grammar

Rule 1     sigma -> programa
Rule 2     programa -> titulo bloque final
Rule 3     titulo -> ACCION ID ES
Rule 4     titulo -> ACCION ILEGAL ES
Rule 5     final -> FIN_ACCION
Rule 6     bloque -> ambient procesos
Rule 7     bloque -> procesos
Rule 8     ambient -> AMBIENTE declaraciones
Rule 9     declaraciones -> ID DOSPUNTOS tipodato
Rule 10    declaraciones -> ID DOSPUNTOS tipodato declaraciones
Rule 11    tipodato -> CADENA
Rule 12    tipodato -> ENTERO
Rule 13    tipodato -> NUMERO
Rule 14    tipodato -> NUM
Rule 15    tipodato -> FLOAT
Rule 16    tipodato -> REAL
Rule 17    procesos -> PROCESO listasentencias
Rule 18    listasentencias -> sentencia PUNTOYCOMA listasentencias
Rule 19    listasentencias -> sentencia
Rule 20    listasentencias -> sentencia PUNTOYCOMA
Rule 21    sentencia -> ID ASIGNACION expresion
Rule 22    sentencia -> LEER PARENTIZQ ID PARENTDER
Rule 23    sentencia -> ESCRIBIR PARENTIZQ listext PARENTDER
Rule 24    text -> TEXTO
Rule 25    text -> ID
Rule 26    text -> NUM
Rule 27    text -> FLOAT
Rule 28    listext -> text COMA listext
Rule 29    listext -> text
Rule 30    sentencia -> REPETIR listasentencias HASTA_QUE cond
Rule 31    sentencia -> SI cond ENTONCES PUNTOYCOMA listasentencias FIN_SI
Rule 32    sentencia -> SI cond ENTONCES PUNTOYCOMA listasentencias SINO PUNTOYCOMA listasentencias FIN_SI
Rule 33    sentencia -> MIENTRAS cond HACER PUNTOYCOMA listasentencias FIN_MIENTRAS
Rule 34    vinicial -> PARENTIZQ ID ASIGNACION NUM PARENTDER
Rule 35    vinicial -> PARENTIZQ ID ASIGNACION ID PARENTDER
Rule 36    vfinal -> NUM
Rule 37    vfinal -> ID
Rule 38    sentencia -> PARA vinicial HASTA vfinal COMA NUM HACER PUNTOYCOMA listasentencias FIN_PARA
Rule 39    expresion -> term
Rule 40    expresion -> agregarOperador term
Rule 41    expresion -> expresion agregarOperador term
Rule 42    agregarOperador -> SUMA
Rule 43    agregarOperador -> RESTA
Rule 44    term -> factor
Rule 45    term -> term multiplicarOperador factor
Rule 46    multiplicarOperador -> PRODUCTO
Rule 47    multiplicarOperador -> DIVISION
Rule 48    multiplicarOperador -> DIV
Rule 49    multiplicarOperador -> MOD
Rule 50    multiplicarOperador -> POTENCIA
Rule 51    factor -> ID
Rule 52    factor -> NUM
Rule 53    factor -> FLOAT
Rule 54    factor -> PARENTIZQ expresion PARENTDER
Rule 55    cond -> PARENTIZQ listacondicion PARENTDER
Rule 56    listacondicion -> condicion
Rule 57    listacondicion -> condicion CONJUNCION listacondicion
Rule 58    listacondicion -> condicion DISYUNCION listacondicion
Rule 59    condicion -> NEGACION expresion
Rule 60    condicion -> expresion relacion expresion
Rule 61    relacion -> IGUALQUE
Rule 62    relacion -> DISTINTO
Rule 63    relacion -> MENORQUE
Rule 64    relacion -> MAYORQUE
Rule 65    relacion -> MENOROIGUAL
Rule 66    relacion -> MAYOROIGUAL
Rule 67    relacion -> DISYUNCION
Rule 68    relacion -> CONJUNCION

Terminals, with rules where they appear

ACCION               : 3 4
AMBIENTE             : 8
ASIGNACION           : 21 34 35
CADENA               : 11
COMA                 : 28 38
CONJUNCION           : 57 68
DISTINTO             : 62
DISYUNCION           : 58 67
DIV                  : 48
DIVISION             : 47
DOSPUNTOS            : 9 10
ENTERO               : 12
ENTONCES             : 31 32
ES                   : 3 4
ESCRIBIR             : 23
FIN_ACCION           : 5
FIN_MIENTRAS         : 33
FIN_PARA             : 38
FIN_SI               : 31 32
FLOAT                : 15 27 53
HACER                : 33 38
HASTA                : 38
HASTA_QUE            : 30
ID                   : 3 9 10 21 22 25 34 35 35 37 51
IGUALQUE             : 61
ILEGAL               : 4
LEER                 : 22
MAYOROIGUAL          : 66
MAYORQUE             : 64
MENOROIGUAL          : 65
MENORQUE             : 63
MIENTRAS             : 33
MOD                  : 49
NEGACION             : 59
NUM                  : 14 26 34 36 38 52
NUMERO               : 13
PARA                 : 38
PARENTDER            : 22 23 34 35 54 55
PARENTIZQ            : 22 23 34 35 54 55
POTENCIA             : 50
PROCESO              : 17
PRODUCTO             : 46
PUNTOYCOMA           : 18 20 31 32 32 33 38
REAL                 : 16
REPETIR              : 30
RESTA                : 43
SI                   : 31 32
SINO                 : 32
SUMA                 : 42
TEXTO                : 24
error                : 

Nonterminals, with rules where they appear

agregarOperador      : 40 41
ambient              : 6
bloque               : 2
cond                 : 30 31 32 33
condicion            : 56 57 58
declaraciones        : 8 10
expresion            : 21 41 54 59 60 60
factor               : 44 45
final                : 2
listacondicion       : 55 57 58
listasentencias      : 17 18 30 31 32 32 33 38
listext              : 23 28
multiplicarOperador  : 45
procesos             : 6 7
programa             : 1
relacion             : 60
sentencia            : 18 19 20
sigma                : 0
term                 : 39 40 41 45
text                 : 28 29
tipodato             : 9 10
titulo               : 2
vfinal               : 38
vinicial             : 38


Parsing method: LALR


state 0

    (0) S' -> . sigma
    (1) sigma -> . programa
    (2) programa -> . titulo bloque final
    (3) titulo -> . ACCION ID ES
    (4) titulo -> . ACCION ILEGAL ES

    ACCION          shift and go to state 1


    titulo                         shift and go to state 3
    sigma                          shift and go to state 4
    programa                       shift and go to state 2

state 1

    (3) titulo -> ACCION . ID ES
    (4) titulo -> ACCION . ILEGAL ES

    ID              shift and go to state 6
    ILEGAL          shift and go to state 5



state 2

    (1) sigma -> programa .

    $end            reduce using rule 1 (sigma -> programa .)



state 3

    (2) programa -> titulo . bloque final
    (6) bloque -> . ambient procesos
    (7) bloque -> . procesos
    (8) ambient -> . AMBIENTE declaraciones
    (17) procesos -> . PROCESO listasentencias

    AMBIENTE        shift and go to state 11
    PROCESO         shift and go to state 8


    procesos                       shift and go to state 7
    ambient                        shift and go to state 9
    bloque                         shift and go to state 10

state 4

    (0) S' -> sigma .




state 5

    (4) titulo -> ACCION ILEGAL . ES

    ES              shift and go to state 12



state 6

    (3) titulo -> ACCION ID . ES

    ES              shift and go to state 13



state 7

    (7) bloque -> procesos .

    FIN_ACCION      reduce using rule 7 (bloque -> procesos .)



state 8

    (17) procesos -> PROCESO . listasentencias
    (18) listasentencias -> . sentencia PUNTOYCOMA listasentencias
    (19) listasentencias -> . sentencia
    (20) listasentencias -> . sentencia PUNTOYCOMA
    (21) sentencia -> . ID ASIGNACION expresion
    (22) sentencia -> . LEER PARENTIZQ ID PARENTDER
    (23) sentencia -> . ESCRIBIR PARENTIZQ listext PARENTDER
    (30) sentencia -> . REPETIR listasentencias HASTA_QUE cond
    (31) sentencia -> . SI cond ENTONCES PUNTOYCOMA listasentencias FIN_SI
    (32) sentencia -> . SI cond ENTONCES PUNTOYCOMA listasentencias SINO PUNTOYCOMA listasentencias FIN_SI
    (33) sentencia -> . MIENTRAS cond HACER PUNTOYCOMA listasentencias FIN_MIENTRAS
    (38) sentencia -> . PARA vinicial HASTA vfinal COMA NUM HACER PUNTOYCOMA listasentencias FIN_PARA

    ID              shift and go to state 20
    LEER            shift and go to state 21
    ESCRIBIR        shift and go to state 16
    REPETIR         shift and go to state 17
    SI              shift and go to state 22
    MIENTRAS        shift and go to state 19
    PARA            shift and go to state 14


    listasentencias                shift and go to state 18
    sentencia                      shift and go to state 15

state 9

    (6) bloque -> ambient . procesos
    (17) procesos -> . PROCESO listasentencias

    PROCESO         shift and go to state 8


    procesos                       shift and go to state 23

state 10

    (2) programa -> titulo bloque . final
    (5) final -> . FIN_ACCION

    FIN_ACCION      shift and go to state 25


    final                          shift and go to state 24

state 11

    (8) ambient -> AMBIENTE . declaraciones
    (9) declaraciones -> . ID DOSPUNTOS tipodato
    (10) declaraciones -> . ID DOSPUNTOS tipodato declaraciones

    ID              shift and go to state 27


    declaraciones                  shift and go to state 26

state 12

    (4) titulo -> ACCION ILEGAL ES .

    AMBIENTE        reduce using rule 4 (titulo -> ACCION ILEGAL ES .)
    PROCESO         reduce using rule 4 (titulo -> ACCION ILEGAL ES .)



state 13

    (3) titulo -> ACCION ID ES .

    AMBIENTE        reduce using rule 3 (titulo -> ACCION ID ES .)
    PROCESO         reduce using rule 3 (titulo -> ACCION ID ES .)



state 14

    (38) sentencia -> PARA . vinicial HASTA vfinal COMA NUM HACER PUNTOYCOMA listasentencias FIN_PARA
    (34) vinicial -> . PARENTIZQ ID ASIGNACION NUM PARENTDER
    (35) vinicial -> . PARENTIZQ ID ASIGNACION ID PARENTDER

    PARENTIZQ       shift and go to state 29


    vinicial                       shift and go to state 28

state 15

    (18) listasentencias -> sentencia . PUNTOYCOMA listasentencias
    (19) listasentencias -> sentencia .
    (20) listasentencias -> sentencia . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 30
    FIN_ACCION      reduce using rule 19 (listasentencias -> sentencia .)
    HASTA_QUE       reduce using rule 19 (listasentencias -> sentencia .)
    FIN_MIENTRAS    reduce using rule 19 (listasentencias -> sentencia .)
    FIN_SI          reduce using rule 19 (listasentencias -> sentencia .)
    SINO            reduce using rule 19 (listasentencias -> sentencia .)
    FIN_PARA        reduce using rule 19 (listasentencias -> sentencia .)



state 16

    (23) sentencia -> ESCRIBIR . PARENTIZQ listext PARENTDER

    PARENTIZQ       shift and go to state 31



state 17

    (30) sentencia -> REPETIR . listasentencias HASTA_QUE cond
    (18) listasentencias -> . sentencia PUNTOYCOMA listasentencias
    (19) listasentencias -> . sentencia
    (20) listasentencias -> . sentencia PUNTOYCOMA
    (21) sentencia -> . ID ASIGNACION expresion
    (22) sentencia -> . LEER PARENTIZQ ID PARENTDER
    (23) sentencia -> . ESCRIBIR PARENTIZQ listext PARENTDER
    (30) sentencia -> . REPETIR listasentencias HASTA_QUE cond
    (31) sentencia -> . SI cond ENTONCES PUNTOYCOMA listasentencias FIN_SI
    (32) sentencia -> . SI cond ENTONCES PUNTOYCOMA listasentencias SINO PUNTOYCOMA listasentencias FIN_SI
    (33) sentencia -> . MIENTRAS cond HACER PUNTOYCOMA listasentencias FIN_MIENTRAS
    (38) sentencia -> . PARA vinicial HASTA vfinal COMA NUM HACER PUNTOYCOMA listasentencias FIN_PARA

    ID              shift and go to state 20
    LEER            shift and go to state 21
    ESCRIBIR        shift and go to state 16
    REPETIR         shift and go to state 17
    SI              shift and go to state 22
    MIENTRAS        shift and go to state 19
    PARA            shift and go to state 14


    listasentencias                shift and go to state 32
    sentencia                      shift and go to state 15

state 18

    (17) procesos -> PROCESO listasentencias .

    FIN_ACCION      reduce using rule 17 (procesos -> PROCESO listasentencias .)



state 19

    (33) sentencia -> MIENTRAS . cond HACER PUNTOYCOMA listasentencias FIN_MIENTRAS
    (55) cond -> . PARENTIZQ listacondicion PARENTDER

    PARENTIZQ       shift and go to state 33


    cond                           shift and go to state 34

state 20

    (21) sentencia -> ID . ASIGNACION expresion

    ASIGNACION      shift and go to state 35



state 21

    (22) sentencia -> LEER . PARENTIZQ ID PARENTDER

    PARENTIZQ       shift and go to state 36



state 22

    (31) sentencia -> SI . cond ENTONCES PUNTOYCOMA listasentencias FIN_SI
    (32) sentencia -> SI . cond ENTONCES PUNTOYCOMA listasentencias SINO PUNTOYCOMA listasentencias FIN_SI
    (55) cond -> . PARENTIZQ listacondicion PARENTDER

    PARENTIZQ       shift and go to state 33


    cond                           shift and go to state 37

state 23

    (6) bloque -> ambient procesos .

    FIN_ACCION      reduce using rule 6 (bloque -> ambient procesos .)



state 24

    (2) programa -> titulo bloque final .

    $end            reduce using rule 2 (programa -> titulo bloque final .)



state 25

    (5) final -> FIN_ACCION .

    $end            reduce using rule 5 (final -> FIN_ACCION .)



state 26

    (8) ambient -> AMBIENTE declaraciones .

    PROCESO         reduce using rule 8 (ambient -> AMBIENTE declaraciones .)



state 27

    (9) declaraciones -> ID . DOSPUNTOS tipodato
    (10) declaraciones -> ID . DOSPUNTOS tipodato declaraciones

    DOSPUNTOS       shift and go to state 38



state 28

    (38) sentencia -> PARA vinicial . HASTA vfinal COMA NUM HACER PUNTOYCOMA listasentencias FIN_PARA

    HASTA           shift and go to state 39



state 29

    (34) vinicial -> PARENTIZQ . ID ASIGNACION NUM PARENTDER
    (35) vinicial -> PARENTIZQ . ID ASIGNACION ID PARENTDER

    ID              shift and go to state 40



state 30

    (18) listasentencias -> sentencia PUNTOYCOMA . listasentencias
    (20) listasentencias -> sentencia PUNTOYCOMA .
    (18) listasentencias -> . sentencia PUNTOYCOMA listasentencias
    (19) listasentencias -> . sentencia
    (20) listasentencias -> . sentencia PUNTOYCOMA
    (21) sentencia -> . ID ASIGNACION expresion
    (22) sentencia -> . LEER PARENTIZQ ID PARENTDER
    (23) sentencia -> . ESCRIBIR PARENTIZQ listext PARENTDER
    (30) sentencia -> . REPETIR listasentencias HASTA_QUE cond
    (31) sentencia -> . SI cond ENTONCES PUNTOYCOMA listasentencias FIN_SI
    (32) sentencia -> . SI cond ENTONCES PUNTOYCOMA listasentencias SINO PUNTOYCOMA listasentencias FIN_SI
    (33) sentencia -> . MIENTRAS cond HACER PUNTOYCOMA listasentencias FIN_MIENTRAS
    (38) sentencia -> . PARA vinicial HASTA vfinal COMA NUM HACER PUNTOYCOMA listasentencias FIN_PARA

    FIN_ACCION      reduce using rule 20 (listasentencias -> sentencia PUNTOYCOMA .)
    HASTA_QUE       reduce using rule 20 (listasentencias -> sentencia PUNTOYCOMA .)
    FIN_MIENTRAS    reduce using rule 20 (listasentencias -> sentencia PUNTOYCOMA .)
    FIN_SI          reduce using rule 20 (listasentencias -> sentencia PUNTOYCOMA .)
    SINO            reduce using rule 20 (listasentencias -> sentencia PUNTOYCOMA .)
    FIN_PARA        reduce using rule 20 (listasentencias -> sentencia PUNTOYCOMA .)
    ID              shift and go to state 20
    LEER            shift and go to state 21
    ESCRIBIR        shift and go to state 16
    REPETIR         shift and go to state 17
    SI              shift and go to state 22
    MIENTRAS        shift and go to state 19
    PARA            shift and go to state 14


    sentencia                      shift and go to state 15
    listasentencias                shift and go to state 41

state 31

    (23) sentencia -> ESCRIBIR PARENTIZQ . listext PARENTDER
    (28) listext -> . text COMA listext
    (29) listext -> . text
    (24) text -> . TEXTO
    (25) text -> . ID
    (26) text -> . NUM
    (27) text -> . FLOAT

    TEXTO           shift and go to state 44
    ID              shift and go to state 46
    NUM             shift and go to state 45
    FLOAT           shift and go to state 42


    text                           shift and go to state 43
    listext                        shift and go to state 47

state 32

    (30) sentencia -> REPETIR listasentencias . HASTA_QUE cond

    HASTA_QUE       shift and go to state 48



state 33

    (55) cond -> PARENTIZQ . listacondicion PARENTDER
    (56) listacondicion -> . condicion
    (57) listacondicion -> . condicion CONJUNCION listacondicion
    (58) listacondicion -> . condicion DISYUNCION listacondicion
    (59) condicion -> . NEGACION expresion
    (60) condicion -> . expresion relacion expresion
    (39) expresion -> . term
    (40) expresion -> . agregarOperador term
    (41) expresion -> . expresion agregarOperador term
    (44) term -> . factor
    (45) term -> . term multiplicarOperador factor
    (42) agregarOperador -> . SUMA
    (43) agregarOperador -> . RESTA
    (51) factor -> . ID
    (52) factor -> . NUM
    (53) factor -> . FLOAT
    (54) factor -> . PARENTIZQ expresion PARENTDER

    NEGACION        shift and go to state 51
    SUMA            shift and go to state 61
    RESTA           shift and go to state 54
    ID              shift and go to state 55
    NUM             shift and go to state 53
    FLOAT           shift and go to state 52
    PARENTIZQ       shift and go to state 60


    expresion                      shift and go to state 59
    term                           shift and go to state 49
    listacondicion                 shift and go to state 50
    condicion                      shift and go to state 56
    factor                         shift and go to state 57
    agregarOperador                shift and go to state 58

state 34

    (33) sentencia -> MIENTRAS cond . HACER PUNTOYCOMA listasentencias FIN_MIENTRAS

    HACER           shift and go to state 62



state 35

    (21) sentencia -> ID ASIGNACION . expresion
    (39) expresion -> . term
    (40) expresion -> . agregarOperador term
    (41) expresion -> . expresion agregarOperador term
    (44) term -> . factor
    (45) term -> . term multiplicarOperador factor
    (42) agregarOperador -> . SUMA
    (43) agregarOperador -> . RESTA
    (51) factor -> . ID
    (52) factor -> . NUM
    (53) factor -> . FLOAT
    (54) factor -> . PARENTIZQ expresion PARENTDER

    SUMA            shift and go to state 61
    RESTA           shift and go to state 54
    ID              shift and go to state 55
    NUM             shift and go to state 53
    FLOAT           shift and go to state 52
    PARENTIZQ       shift and go to state 60


    expresion                      shift and go to state 63
    agregarOperador                shift and go to state 58
    term                           shift and go to state 49
    factor                         shift and go to state 57

state 36

    (22) sentencia -> LEER PARENTIZQ . ID PARENTDER

    ID              shift and go to state 64



state 37

    (31) sentencia -> SI cond . ENTONCES PUNTOYCOMA listasentencias FIN_SI
    (32) sentencia -> SI cond . ENTONCES PUNTOYCOMA listasentencias SINO PUNTOYCOMA listasentencias FIN_SI

    ENTONCES        shift and go to state 65



state 38

    (9) declaraciones -> ID DOSPUNTOS . tipodato
    (10) declaraciones -> ID DOSPUNTOS . tipodato declaraciones
    (11) tipodato -> . CADENA
    (12) tipodato -> . ENTERO
    (13) tipodato -> . NUMERO
    (14) tipodato -> . NUM
    (15) tipodato -> . FLOAT
    (16) tipodato -> . REAL

    CADENA          shift and go to state 67
    ENTERO          shift and go to state 72
    NUMERO          shift and go to state 70
    NUM             shift and go to state 71
    FLOAT           shift and go to state 69
    REAL            shift and go to state 66


    tipodato                       shift and go to state 68

state 39

    (38) sentencia -> PARA vinicial HASTA . vfinal COMA NUM HACER PUNTOYCOMA listasentencias FIN_PARA
    (36) vfinal -> . NUM
    (37) vfinal -> . ID

    NUM             shift and go to state 74
    ID              shift and go to state 75


    vfinal                         shift and go to state 73

state 40

    (34) vinicial -> PARENTIZQ ID . ASIGNACION NUM PARENTDER
    (35) vinicial -> PARENTIZQ ID . ASIGNACION ID PARENTDER

    ASIGNACION      shift and go to state 76



state 41

    (18) listasentencias -> sentencia PUNTOYCOMA listasentencias .

    FIN_ACCION      reduce using rule 18 (listasentencias -> sentencia PUNTOYCOMA listasentencias .)
    HASTA_QUE       reduce using rule 18 (listasentencias -> sentencia PUNTOYCOMA listasentencias .)
    FIN_MIENTRAS    reduce using rule 18 (listasentencias -> sentencia PUNTOYCOMA listasentencias .)
    FIN_SI          reduce using rule 18 (listasentencias -> sentencia PUNTOYCOMA listasentencias .)
    SINO            reduce using rule 18 (listasentencias -> sentencia PUNTOYCOMA listasentencias .)
    FIN_PARA        reduce using rule 18 (listasentencias -> sentencia PUNTOYCOMA listasentencias .)



state 42

    (27) text -> FLOAT .

    COMA            reduce using rule 27 (text -> FLOAT .)
    PARENTDER       reduce using rule 27 (text -> FLOAT .)



state 43

    (28) listext -> text . COMA listext
    (29) listext -> text .

    COMA            shift and go to state 77
    PARENTDER       reduce using rule 29 (listext -> text .)



state 44

    (24) text -> TEXTO .

    COMA            reduce using rule 24 (text -> TEXTO .)
    PARENTDER       reduce using rule 24 (text -> TEXTO .)



state 45

    (26) text -> NUM .

    COMA            reduce using rule 26 (text -> NUM .)
    PARENTDER       reduce using rule 26 (text -> NUM .)



state 46

    (25) text -> ID .

    COMA            reduce using rule 25 (text -> ID .)
    PARENTDER       reduce using rule 25 (text -> ID .)



state 47

    (23) sentencia -> ESCRIBIR PARENTIZQ listext . PARENTDER

    PARENTDER       shift and go to state 78



state 48

    (30) sentencia -> REPETIR listasentencias HASTA_QUE . cond
    (55) cond -> . PARENTIZQ listacondicion PARENTDER

    PARENTIZQ       shift and go to state 33


    cond                           shift and go to state 79

state 49

    (39) expresion -> term .
    (45) term -> term . multiplicarOperador factor
    (46) multiplicarOperador -> . PRODUCTO
    (47) multiplicarOperador -> . DIVISION
    (48) multiplicarOperador -> . DIV
    (49) multiplicarOperador -> . MOD
    (50) multiplicarOperador -> . POTENCIA

    SUMA            reduce using rule 39 (expresion -> term .)
    RESTA           reduce using rule 39 (expresion -> term .)
    PUNTOYCOMA      reduce using rule 39 (expresion -> term .)
    FIN_ACCION      reduce using rule 39 (expresion -> term .)
    HASTA_QUE       reduce using rule 39 (expresion -> term .)
    FIN_MIENTRAS    reduce using rule 39 (expresion -> term .)
    FIN_SI          reduce using rule 39 (expresion -> term .)
    SINO            reduce using rule 39 (expresion -> term .)
    FIN_PARA        reduce using rule 39 (expresion -> term .)
    IGUALQUE        reduce using rule 39 (expresion -> term .)
    DISTINTO        reduce using rule 39 (expresion -> term .)
    MENORQUE        reduce using rule 39 (expresion -> term .)
    MAYORQUE        reduce using rule 39 (expresion -> term .)
    MENOROIGUAL     reduce using rule 39 (expresion -> term .)
    MAYOROIGUAL     reduce using rule 39 (expresion -> term .)
    DISYUNCION      reduce using rule 39 (expresion -> term .)
    CONJUNCION      reduce using rule 39 (expresion -> term .)
    PARENTDER       reduce using rule 39 (expresion -> term .)
    PRODUCTO        shift and go to state 81
    DIVISION        shift and go to state 80
    DIV             shift and go to state 84
    MOD             shift and go to state 85
    POTENCIA        shift and go to state 82


    multiplicarOperador            shift and go to state 83

state 50

    (55) cond -> PARENTIZQ listacondicion . PARENTDER

    PARENTDER       shift and go to state 86



state 51

    (59) condicion -> NEGACION . expresion
    (39) expresion -> . term
    (40) expresion -> . agregarOperador term
    (41) expresion -> . expresion agregarOperador term
    (44) term -> . factor
    (45) term -> . term multiplicarOperador factor
    (42) agregarOperador -> . SUMA
    (43) agregarOperador -> . RESTA
    (51) factor -> . ID
    (52) factor -> . NUM
    (53) factor -> . FLOAT
    (54) factor -> . PARENTIZQ expresion PARENTDER

    SUMA            shift and go to state 61
    RESTA           shift and go to state 54
    ID              shift and go to state 55
    NUM             shift and go to state 53
    FLOAT           shift and go to state 52
    PARENTIZQ       shift and go to state 60


    expresion                      shift and go to state 87
    agregarOperador                shift and go to state 58
    term                           shift and go to state 49
    factor                         shift and go to state 57

state 52

    (53) factor -> FLOAT .
